Fix выбор вариантов на iOS платформе изменение логики передачи z-index

--- a/src/scss/module/_product.scss
+++ b/src/scss/module/_product.scss
@@ -11,8 +11,8 @@
 		border: 1px solid #fff;
 		background: #fff;
 	}
-	&:hover{
-		z-index: 100;
+	&.is--additives-opened{
+		z-index: 200;
 		&:after{
 			top: 0; bottom: 0;
 			left: -10px; right: -10px;
@@ -24,15 +24,18 @@
 	@include media('<1160px'){
 		width: percentage(1/3);
 	}
+	@include media('<992px'){
+		&.is--additives-opened{
+			&:after{
+				display: none;
+			}
+		}
+	}
 	@include media('<880px'){
 		width: percentage(1/2);
 	}
 	@include media('<640px'){
 		width: percentage(1/1);
-
-		&:after{
-			display: none;
-		}
 	}
 }
 .product__inner{
